# cgal-for-nurbs

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  readme.md
